--- a/style.css
+++ b/style.css
@@ -28,68 +28,25 @@ a:hover {
     background-color: rgba(0, 0, 0, .2);
 }
 
-/*Carousel styling*/
-.carousel-inner img {
-    width: 100%;
-    height: 90%;
-    max-height: 700px;
-    max-width: 1900px;
+.wrapper {
+    padding-right: 40px;
+    padding-left: 40px;
+    background-color: #a6192e;
+    opacity: .98
 }
 
-.carousel-caption {
-    position: absolute;
-    top: 10%;
-    right: 50%;
-    transform: translateY(-50%);
-    transform: translateX(-10%);
-}
-
-.carousel-caption h2 {
-    font-size: 6vw;
-    text-transform: uppercase;
-    padding-bottom: 1vw;
-}
-
-
-.carousel-indicators .active {
-    background-color: rgba(166, 25, 46, 1);
-}
-
-.carousel-indicators li {
-    background-color: rgba(166, 25, 46, .6);
-    border-radius: 100%;
-    width: 1vw;
-    height: 1vw;
-}
-
-.carousel-indicators {
-    bottom: -30px;
-}
 
 /*button styling*/
-.btn-primary {
-    background: grey;
-    border: 1px solid #563d7c;
-    font-size: 1.5vw;
-}
-
-.btn-primary:hover {
-    background: lightgrey;
-    border: 1px solid #563d7c;
-    color: black;
+.btn:hover {
+    background-color: rgba(255, 255, 255, .985);
+    border: 1px solid #a6192e;
+    color: #a6192e;
 }
 
 .btn {
-    font-size: 1.5vw;
+    font-size: 1vw;
 }
 
-.btn-overlay {
-    font-size: 1vw;
-    position: absolute;
-    right: 47%;
-    bottom: 2px;
-    border-radius: 10px;
-}
 
 /*read more button expansions*/
 .overlay {
@@ -173,8 +130,7 @@ a:hover {
     background-color: rgba(245, 245, 245, .9);
     border-color: rgba(200, 200, 200, .9);
     border-width: thin;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9);
-    transition: 0.3s;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
     border-radius: 5px;
     transform-style: preserve-3d;
     position: relative;
@@ -187,9 +143,11 @@ img {
 }
 
 /* On mouse-over, add a deeper shadow */
+/*
 .card:hover {
-    box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.9);
+    box-shadow: 0 5px 7px 0 rgba(0, 0, 0, 0.9);
 }
+*/
 
 /* Add some padding inside the card container */
 .container {
@@ -219,22 +177,29 @@ img {
 }
 
 
+.img-hover-zoom {
+
+    overflow: hidden;
+    /* [1.2] Hide the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+    transition: transform .8s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+    transform: scale(1.1);
+}
+
+
 
 
 /*---Media Queries --*/
+
+
 @media (max-width: 2000px) {
-
-    /*blurred background behind carousel captions*/
-    .blurred_background {
-        background-color: rgba(255, 255, 255, .8);
-        position: absolute;
-        width: 35vw;
-        height: 25vh;
-        -webkit-filter: blur(10px);
-        filter: blur(10px);
-        z-index: -1;
-    }
-
     .overlay-text span {
         position: absolute;
         top: 10%;
@@ -244,24 +209,22 @@ img {
         font-size: .8vw;
     }
 
+    #appgal {
+        font-size: 3.5vw;
+    }
+
+    .container-fluid {
+        min-height: 94vh;
+    }
+
+    h1 {
+        font-size: 4vw;
+    }
 }
 
 
 
 @media (max-width: 1440px) {
-
-    /*blurred background behind carousel captions*/
-    .blurred_background {
-        background-color: rgba(255, 255, 255, .8);
-        position: absolute;
-        width: 35vw;
-        height: 19vh;
-        -webkit-filter: blur(10px);
-        filter: blur(10px);
-        z-index: -1;
-
-    }
-
     .overlay-text span {
         position: absolute;
         top: 10%;
@@ -271,91 +234,149 @@ img {
         font-size: 1.1vw;
     }
 
-
-
-
-    @media (max-width: 992px) {
-
-        /*blurred background behind carousel captions*/
-        .blurred_background {
-            background-color: rgba(255, 255, 255, .8);
-            position: absolute;
-            width: 35vw;
-            height: 19vh;
-            -webkit-filter: blur(10px);
-            filter: blur(10px);
-            z-index: -1;
-
-        }
-
-        .overlay-text span {
-            position: absolute;
-            top: 10%;
-            left: 10%;
-            transform: translate(-10%, -10%);
-            color: black;
-            font-size: 1vw;
-        }
-
+    #appgal {
+        font-size: 3.5vw;
     }
 
-
-    @media (max-width: 767px) {
-
-        /*blurred background behind carousel captions*/
-        .blurred_background {
-            background-color: rgba(255, 255, 255, .8);
-            position: absolute;
-            width: 35vw;
-            height: 15vh;
-            -webkit-filter: blur(10px);
-            filter: blur(10px);
-            z-index: -1;
-        }
-
-
-        .overlay-text span {
-            position: absolute;
-            top: 10%;
-            left: 10%;
-            transform: translate(-10%, -10%);
-            color: black;
-            font-size: 2.0vw;
-        }
+    .container-fluid {
+        min-height: auto;
     }
 
-    @media (max-width: 576px) {
-        .blurred_background {
-            background-color: rgba(255, 255, 255, .8);
-            position: absolute;
-            width: 35vw;
-            height: 12vh;
-            -webkit-filter: blur(10px);
-            filter: blur(10px);
-            z-index: -1;
-        }
-
-        .overlay-text span {
-            position: absolute;
-            top: 10%;
-            left: 10%;
-            transform: translate(-10%, -10%);
-            color: black;
-            font-size: 2.5vw;
-        }
-
+    h1 {
+        font-size: 4vw;
     }
 
-    /*---Firefox Bug Fix --*/
-    .carousel-item {
-        transition: -webkit-transform 0.5s ease;
-        transition: transform 0.5s ease;
-        transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-        -webkit-backface-visibility: visible;
-        backface-visibility: visible;
+    .btn {
+        font-size: 1.5vw;
+    }
+}
+
+
+@media (max-width: 992px) {
+
+    .overlay-text span {
+        position: absolute;
+        top: 10%;
+        left: 10%;
+        transform: translate(-10%, -10%);
+        color: black;
+        font-size: 1vw;
     }
 
-    /*--- Bootstrap Padding Fix --*/
-    [class*="col-"] {
-        padding: 1rem;
+    #appgal {
+        font-size: 3.5vw;
     }
+
+    .container-fluid {
+        min-height: auto;
+    }
+
+    h1 {
+
+        font-size: 4vw;
+    }
+
+    .btn {
+        font-size: 1.7vw;
+    }
+
+}
+
+
+@media (max-width: 767px) {
+
+    .overlay-text span {
+        position: absolute;
+        top: 10%;
+        left: 10%;
+        transform: translate(-10%, -10%);
+        color: black;
+        font-size: 2.0vw;
+    }
+
+    #bannerimage {
+        margin-top: -7% !important;
+    }
+
+    #bannertitle {
+        margin-top: -15% !important;
+    }
+
+    #appgal {
+        font-size: 6vw;
+    }
+
+    .container-fluid {
+        min-height: auto;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 8vw;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 5vw;
+    }
+
+    .btn {
+        font-size: 2.2vw;
+    }
+}
+
+@media (max-width: 576px) {
+
+    .overlay-text span {
+        position: absolute;
+        top: 10%;
+        left: 10%;
+        transform: translate(-10%, -10%);
+        color: black;
+        font-size: 2.5vw;
+    }
+
+    #bannerimage {
+        margin-top: -7% !important;
+    }
+
+    #bannertitle {
+        margin-top: -15% !important;
+    }
+
+    #appgal {
+        font-size: 5.5vw;
+    }
+
+    .container-fluid {
+        min-height: auto;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 8vw;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 5vw;
+    }
+
+    .btn {
+        font-size: 3vw;
+    }
+}
+
+/*---Firefox Bug Fix --*/
+.carousel-item {
+    transition: -webkit-transform 0.5s ease;
+    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+    -webkit-backface-visibility: visible;
+    backface-visibility: visible;
+}
+
+/*--- Bootstrap Padding Fix --*/
+[class*="col-"] {
+    padding: 1rem;
+}
